finished contact page

--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
                                                     </ul>
                                                 </li>
                                                 <li class="dropdown"> <a class="dropdown-item dropdown-toggle"
-                                                        href="elements.html">
+                                                        href="services.html">
                                                         Services </a>
                                                     <ul class="dropdown-menu">
                                                         <li> <a class="dropdown-item" href="index-2.html"> Leveling 1-60
