--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
                                                     </ul>
                                                 </li>
                                                 <li class="dropdown"> <a class="dropdown-item dropdown-toggle"
-                                                        href="elements.html">
+                                                        href="services.html">
                                                         Services </a>
                                                     <ul class="dropdown-menu">
                                                         <li> <a class="dropdown-item" href="index-2.html"> Leveling 1-60
@@ -161,8 +161,58 @@
         </header>
         <section class="contact-hero">
             <div class="contact-hero-title">
-                <h4>Get in touch</h4>
+                <h4 class="text-white">Get in touch</h4>
                 <p class="subtitle lead">Got questions? Ask us anything!</p>
+            </div>
+        </section>
+        <section class="contact-form">
+            <div class="container">
+                <div class="row py-4">
+                    <div class="col-lg-8 offset-2">
+                        <div class="form-title">
+                            <h2><strong>Contact</strong> Us</h2>
+                            <p>Feel free to ask for details, don't save any questions!</p>
+                        </div>
+                        <form>
+                            <div class="form-row">
+                                <div class="form-group col-lg-6">
+                                    <label for="name" class="required">Full Name</label>
+                                    <input type="text" name="name" id="name" required maxlength="100"
+                                        class="form-control" placeholder="Please enter your Full Name...">
+                                </div>
+                                <div class="form-group col-lg-6">
+                                    <label for="name" class="required">Email Address</label>
+                                    <input type="email" name="name" id="name" required class="form-control"
+                                        placeholder="Please enter your email address">
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col">
+                                    <label for="subject">Subject</label>
+                                    <input type="text" name="subject" id="subject"
+                                        placeholder="Please enter the subject" maxlength="100" class="form-control"
+                                        required>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col">
+                                    <label for="message">Message</label>
+                                    <textarea name="message" id="" cols="30" rows="8" maxlength="5000"
+                                        placeholder="Please enter your message" class="form-control"
+                                        required></textarea>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col"><input type="submit" value="Send Message"
+                                        class="btn btn-primary"></div>
+                            </div>
+                        </form>
+                        <h2 class="mt-2 mb-1">Get in <strong>Touch</strong></h2>
+                        <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab odit, consequuntur
+                            sapiente voluptatum, inventore perferendis eaque, veritatis cupiditate ad consectetur esse
+                            fuga dolore magnam iure. Quas, omnis aspernatur?</p>
+                    </div>
+                </div>
             </div>
         </section>
         <footer id="footer" class="mt-0">
@@ -175,7 +225,7 @@
                         <p class="text-4 mb-4 pb-1">Address here</p>
 
                         <p class="text-5 mb-1 pt-2">Call: 123-456-7890</p>
-                        <p class="text-5 mb-0">Email: <a href="mailto:info@porto.com">help@shadowboost.com</a></p>
+                        <p class="text-5 mb-0">Email: <a href="mailto:help@shadowboost.com">help@shadowboost.com</a></p>
                     </div>
                     <div class="col-md-7 col-lg-5 mb-5 mb-lg-0">
                         <h5 class="text-6 text-transform-none font-weight-semibold text-color-light mb-4">Services</h5>
